tests/ui/generic-associated-types/issue-91139.migrate.stderr
error: expected identifier, found `<<`
  --> $DIR/issue-91139.rs:1:1
   |
   | ^^ expected identifier

error: aborting due to 1 previous error

